# rtracer

./: CMakeLists.txt  Makefile  main.c  ray.c  ray.h  rtracer  utils.c  utils.h  vec3.c  vec3.h
